# s-onnx-compiler-frontend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  compile_commands.json  main.cpp
ast/: AST.cpp  AST.hpp
cmake/: ExternalAntlr4Cpp.cmake
docs/: 2025年春编译原理实验要求20250418(3).docx  AST.txt  TAC.txt
error_listener/: LexicalErrorListener.cpp  LexicalErrorListener.hpp  ParserErrorListener.cpp  ParserErrorListener.hpp  ParserErrorStrategy.cpp  ParserErrorStrategy.hpp
grammar/: S_ONNX.g4
listener/: ASTConstructionListener.cpp  ASTConstructionListener.hpp
utils/: Literal2Cpp.cpp  Literal2Cpp.hpp  SymbolTable.cpp  SymbolTable.hpp
visitor/: ASTBaseVisitor.cpp  ASTBaseVisitor.hpp  ASTConstructionVisitor.cpp  ASTConstructionVisitor.hpp  ASTOutputVisitor.cpp  ASTOutputVisitor.hpp  ASTSemanticVisitor.cpp  ASTSemanticVisitor.hpp  Visitor.cpp  Visitor.hpp
